# paperstore

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  dev.sh  docker-compose.local.yml  docker-compose.yml  prod.sh  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
backend/: Dockerfile  pyproject.toml
backend/scripts/: backfill_arxiv_ids.py  backfill_extracted_text.py  dedup_papers.py  import_zotero.py
backend/src/: db.py  main.py
backend/src/api/: auth.py  batch.py  papers.py  recent.py  search_api.py  tags.py
backend/src/models/: batch_job.py  note.py  paper.py  paper_tag.py  tag.py
backend/src/schemas/: batch.py  note.py  paper.py  tag.py
backend/src/services/: arxiv_client.py  batch_metadata.py  drive.py  gemini.py  ingestion.py  notes.py  pdf_parser.py  search.py  types.py
backend/tests/: conftest.py
backend/tests/unit/: test_arxiv_client.py  test_drive.py  test_ingestion.py  test_ingestion_local.py  test_notes.py  test_pdf_parser.py  test_recent.py  test_search.py
docs/: api.md  api_spec.md  orbstack-migration.md
extension/: content.js  manifest.json  popup.html  popup.js  service-worker.js
frontend/: index.html  paper.html  tags.html
frontend/static/: app.js  index.js  paper.js  tags.js  utils.js
scripts/: backups_script.sh  setup_cron.sh
specs/001-paper-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-paper-library/checklists/: requirements.md
specs/001-paper-library/contracts/: api.md
